[package]
name = "mdswp"
version = "0.2.0"
authors = ["dousamichal0807 <dousamichal0807@seznam.cz>"]
edition = "2018"
description = "A simple sliding window protocol written in Rust using UDP under the hood."
readme = "README.md"
repository = "https://github.com/dousamichal0807/mdswp"
license = "GNU GPL v3 or later"
license-file = "LICENSE"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"